# xenith

./: .gitignore  .gitmodules  .vagrantplugins  Cargo.toml  Justfile  README.md  Vagrantfile
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: code-coverage.yaml  mdbook.yml  pages.yaml  restrict-merge-dev.yaml  restrict-merge-main.yaml  rust.yml
ansible/: Justfile  ansible.cfg  post_reboot.yml  pre_reboot.yml
ansible/group_vars/: all.yml
ansible/inventory/: vagrant.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/kde/tasks/: main.yml
ansible/roles/tools/tasks/: libvirt.yml  main.yml  partition.yml  rust.yml  sshd.yml
ansible/roles/xen/files/: cpupool.cfg  xen.cfg
ansible/roles/xen/tasks/: install_from_package.yml  install_from_source.yml  main.yml
docs/: .gitignore  _index.md  book.toml
docs/blog/: _index.md
docs/docs/: _index.md  contributors.md  credits.md  documentation-organization.md  faq.md  roadmap.md
docs/docs/development/: _index.md  contributing.md  getting-started.md  project-setup.md  releasing.md  testing.md
docs/docs/explanations/: _index.md  architecture.md  faq.md  features.md  overview.md
docs/docs/explanations/architecture/: _index.md  xenith-diagram.drawio
docs/docs/guides/: _index.md
docs/docs/reference/: _index.md  debugger.md  domain.md  hypervisor.md  redpill.md  semantig-gap.md  vmi.md  xen.md
docs/docs/reference/crates/: _index.md  xenith-cli.md  xenith-redpill.md  xenith-vm.md  xenith-vmi.md
docs/docs/tutorials/: _index.md  getting-started.md  installation.md  scripting.md  using-debugger.md  using-gui.md
docs/src/: README.md  SUMMARY.md  contributors.md  credits.md  documentation.md  faq.md
docs/src/dev/: index.md
docs/src/development/: contributing.md  getting-started.md  releasing.md  testing.md
docs/src/explanations/: architecture.md  features.md  overview.md
docs/src/guide/: development.md
docs/src/misc/: decisions.md
docs/src/reference/: redpill.md
docs/src/reference/crates/: README.md  xenith-cli.md  xenith-redpill.md  xenith-vm.md  xenith-vmi.md
docs/src/tutorials/: getting-started.md  scripting.md  using-gui.md
packer/: .gitignore  Justfile  Makefile
packer/debian12/: debian12-golden.pkr.hcl  debian12-silver.pkr.hcl  post-install-provision.yml  variables.hcl
packer/debian12-bios/: debian12-bios.pkr.hcl  variables.hcl
packer/debian12-bios/http/: debian.preseed.cfg
xenith-cli/: Cargo.toml
xenith-cli/src/: commands.rs  main.rs
xenith-cli/src/commands/: vm.rs
xenith-core/: Cargo.toml
xenith-core/src/: configuration.rs  lib.rs
xenith-debugger/: Cargo.toml
xenith-domain-management/: Cargo.toml  build.rs
xenith-domain-management/src/: configuration.rs  domain.rs  driver.rs  error.rs  lib.rs  main.rs  templating.rs
xenith-domain-management/src/configuration/: disk.rs  domain.rs  image.rs  template.rs
xenith-domain-management/src/domain/: devices.rs  events.rs  network.rs  processor.rs  time.rs
xenith-domain-management/src/driver/: identifier.rs  status.rs
xenith-domain-management/templates/: default.xml
xenith-domain-management/tests/fixtures/: default.xml
xenith-gui/: Cargo.toml
xenith-gui/src/: main.rs
xenith-redpill/: Cargo.toml
xenith-redpill/src/: detector.rs  lib.rs  main.rs  prelude.rs  techniques.rs
xenith-redpill/src/techniques/: behavior.rs  signature.rs  time.rs
xenith-redpill/xenith-redpill-macros/: Cargo.toml
xenith-redpill/xenith-redpill-macros/src/: lib.rs  technique.rs
xenith-scripting/: Cargo.toml
xenith-vm/: Cargo.toml
xenith-vm/src/: actions.rs  domain.rs  error.rs  lib.rs  templating.rs
xenith-vm/src/domain/: boot.rs  devices.rs  events.rs  network.rs  processor.rs  time.rs
xenith-vm/templates/: default-config.cfg
xenith-vm/tests/fixtures/: default-config.cfg
xenith-vmi/: Cargo.toml
xenith-website/: Justfile  README.md  hugo.yaml
xenith-website/i18n/: en.yaml
xenith-website/static/: manifest.json
