[package]
name = "xenith-cli"
description = "A CLI tool for interacting with Xen and Xenith tools."

# Inherit workspace settings
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "xenith"
path = "src/main.rs"

[dependencies]
log = { workspace = true }

anstyle = "1.0.10"
clap = { version = "4.5.30", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
colog = "1.3.0"
termcolor = "1.4.1"
