[package]
name = "xenith-core"
description = "Provides core functionality for Xenith tools (shared configuration, invariants, utilities, ...)."

edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
