[package]
name = "xenith-debugger"
description = "Debugger bindings for interacting with Xenith domains : breakpoints, stepping, etc with semantic context."

edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
