[package]
name = "xenith-vm"
description = "Library for interacting with Xen. Allows to easily create and manage supported VMs through libvirt."

# Inherit workspace settings
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

include = ["templates/"]

[[bin]]
name = "xenith-vm"
path = "src/main.rs"

[dependencies]
# log = { workspace = true }
# thiserror = { workspace = true }
virt = "0.4.2"
macaddr = { version = "1.0.1", features = ["serde_std"] }
tera = { version = "1.20.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
