[package]
name = "xenith-redpill"
description = "Library and (small) CLI for testing redpills (techniques to detect virtualized environments)."

# Inherit workspace settings
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
documentation.workspace = true

[dependencies]
xenith-redpill-macros = { path = "xenith-redpill-macros" }

log = { workspace = true }
thiserror = { workspace = true }

colog = "1.3.0"
once_cell = "1.20.3"
static_init = "1.0.3"
raw-cpuid = "11.3.0"
num_cpus = "1.16.0"
