[package]
name = "xenith-scripting"
description = "Scripting engine / bindings for Xenith tools, exposes Rust and Python 3."

edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
