[package]
name = "xenith-vm"
description = "Library for interacting with Xen. Allows to easily create and manage supported VMs."

version = "0.1.0"
edition = "2021"

homepage = "<https://xenith.re>"
repository = "<https://github.com/xenith-re/xenith/>"

keywords = ["virtualization", "detection"]
license = "GPL-3.0"

authors = ["abel <67806187+theo-abel@users.noreply.github.com>"]
