[package]
name = "xenith-vm"
description = "Library for interacting with Xen. Allows to easily create and manage supported VMs."

# Inherit workspace settings
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

include = ["templates/"]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }

mac_address = "1.1.8"
tera = { version = "1.20.0", default-features = false }
