[package]
name = "xenith-vmi"
description = "Library for interacting with Xen domU through Virtual Machine Introspection (VMI)."

# Inherit workspace settings
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
documentation.workspace = true
