[package]
name = "xenith-redpill-macros"
description = "A derive macro for the xenith-redpill crate"

version = "0.1.0"
edition = "2021"

homepage = "<https://theo-abel.github.io/xenith/>"
repository = "<https://github.com/theo-abel/xenith/>"

keywords = ["virtualization", "detection"]
license = "GPL-3.0"

authors = ["abel <67806187+theo-abel@users.noreply.github.com>"]

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }
